Adicionada a Referencia WebService e criação das classes no C#

--- a/IntegradorVippWebService/App.config
+++ b/IntegradorVippWebService/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="PostagemVippSoap" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://vpsrv.visualset.com.br/PostagemVipp.asmx"
+                binding="basicHttpBinding" bindingConfiguration="PostagemVippSoap"
+                contract="ServiceReference1.PostagemVippSoap" name="PostagemVippSoap" />
+        </client>
+    </system.serviceModel>
 </configuration>
