--- a/WindowsFormsApplication1/Visualset.IntegradorWebService.csproj
+++ b/WindowsFormsApplication1/Visualset.IntegradorWebService.csproj
@@ -68,7 +68,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="XmlWsVIPP\Class1.cs" />
     <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,6 +82,17 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.map</DependentUpon>
     </Compile>
+    <Compile Include="XmlWsVIPP\DeclaracaoConteudo.cs" />
+    <Compile Include="XmlWsVIPP\Erro.cs" />
+    <Compile Include="XmlWsVIPP\ItemConteudo.cs" />
+    <Compile Include="XmlWsVIPP\ListaErros.cs" />
+    <Compile Include="XmlWsVIPP\Volumes.cs" />
+    <Compile Include="XmlWsVIPP\ContratoEct.cs" />
+    <Compile Include="XmlWsVIPP\NotaFiscal.cs" />
+    <Compile Include="XmlWsVIPP\NotasFiscais.cs" />
+    <Compile Include="XmlWsVIPP\PostagemVipp.cs" />
+    <Compile Include="XmlWsVIPP\Servico.cs" />
+    <Compile Include="XmlWsVIPP\VolumeObjeto.cs" />
     <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
