--- a/WindowsFormsApplication1/Visualset.IntegradorWebService.csproj
+++ b/WindowsFormsApplication1/Visualset.IntegradorWebService.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Services\FormatacaoPlanilha.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ProcessaPlanilha.cs" />
     <Compile Include="Web References\WSVippPostar\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -86,6 +87,7 @@
     <Compile Include="XmlWsVIPP\Erro.cs" />
     <Compile Include="XmlWsVIPP\ItemConteudo.cs" />
     <Compile Include="XmlWsVIPP\ListaErros.cs" />
+    <Compile Include="XmlWsVIPP\PerfilVipp.cs" />
     <Compile Include="XmlWsVIPP\Volumes.cs" />
     <Compile Include="XmlWsVIPP\ContratoEct.cs" />
     <Compile Include="XmlWsVIPP\NotaFiscal.cs" />
