--- a/WindowsFormsApplication1/Visualset.IntegradorWebService.csproj
+++ b/WindowsFormsApplication1/Visualset.IntegradorWebService.csproj
@@ -78,7 +78,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ProcessaPlanilha.cs" />
-    <Compile Include="Web References\WSVippPostar\Reference.cs">
+    <Compile Include="Web References\WSVIPP\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.map</DependentUpon>
@@ -105,27 +105,27 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="Web References\WSVippPostar\BloquearDownload.datasource">
+    <None Include="Web References\WSVIPP\BloquearDownload.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
-    <None Include="Web References\WSVippPostar\BloquearObjetoCorreios.datasource">
+    <None Include="Web References\WSVIPP\BloquearObjetoCorreios.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
-    <None Include="Web References\WSVippPostar\LiberarDownload.datasource">
+    <None Include="Web References\WSVIPP\item.wsdl" />
+    <None Include="Web References\WSVIPP\LiberarDownload.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
-    <None Include="Web References\WSVippPostar\ObjetoRastreio.datasource">
+    <None Include="Web References\WSVIPP\ObjetoRastreio.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
-    <None Include="Web References\WSVippPostar\PostagemRetorno.datasource">
+    <None Include="Web References\WSVIPP\PostagemRetorno.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
-    <None Include="Web References\WSVippPostar\PostagemVipp.wsdl" />
-    <None Include="Web References\WSVippPostar\Reference.map">
+    <None Include="Web References\WSVIPP\Reference.map">
       <Generator>MSDiscoCodeGenerator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
-    <None Include="Web References\WSVippPostar\RetornoEtiquetas.datasource">
+    <None Include="Web References\WSVIPP\RetornoEtiquetas.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
   </ItemGroup>
@@ -136,24 +136,24 @@
     <WebReferences Include="Web References\" />
   </ItemGroup>
   <ItemGroup>
-    <WebReferenceUrl Include="http://vpsrv.visualset.com.br/PostagemVipp.asmx%3fWSDL">
-      <UrlBehavior>Dynamic</UrlBehavior>
-      <RelPath>Web References\WSVippPostar\</RelPath>
-      <UpdateFromURL>http://vpsrv.visualset.com.br/PostagemVipp.asmx%3fWSDL</UpdateFromURL>
-      <ServiceLocationURL>
-      </ServiceLocationURL>
-      <CachedDynamicPropName>
-      </CachedDynamicPropName>
-      <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
-      <CachedSettingsPropName>WindowsFormsApplication1_WSVippPostar_PostagemVipp</CachedSettingsPropName>
-    </WebReferenceUrl>
-  </ItemGroup>
-  <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
       <Visible>False</Visible>
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <WebReferenceUrl Include="http://vpsrv.visualset.com.br/%3fwsdl">
+      <UrlBehavior>Dynamic</UrlBehavior>
+      <RelPath>Web References\WSVIPP\</RelPath>
+      <UpdateFromURL>http://vpsrv.visualset.com.br/%3fwsdl</UpdateFromURL>
+      <ServiceLocationURL>
+      </ServiceLocationURL>
+      <CachedDynamicPropName>
+      </CachedDynamicPropName>
+      <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
+      <CachedSettingsPropName>WindowsFormsApplication1_WSVIPP_PostagemVipp</CachedSettingsPropName>
+    </WebReferenceUrl>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
