Implementacao da classe PostarObjeto, recebe uma lista e devolve uma string com o status da Postagem

--- a/WindowsFormsApplication1/Visualset.IntegradorWebService.csproj
+++ b/WindowsFormsApplication1/Visualset.IntegradorWebService.csproj
@@ -83,6 +83,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.map</DependentUpon>
     </Compile>
+    <Compile Include="VIPP\PostarObjeto.cs" />
     <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
