--- a/WindowsFormsApplication1/Visualset.IntegradorWebService.csproj
+++ b/WindowsFormsApplication1/Visualset.IntegradorWebService.csproj
@@ -68,16 +68,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExcelServices\GravaRetornoExcel.cs" />
     <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Services\FormatacaoPlanilha.cs" />
+    <Compile Include="ExcelServices\FormatacaoPlanilha.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\ProcessaPlanilha.cs" />
+    <Compile Include="ExcelServices\ProcessaPlanilha.cs" />
+    <Compile Include="VIPP\Retorno.cs" />
+    <Compile Include="VIPP\RetornoInvalida.cs" />
+    <Compile Include="VIPP\RetornoValida.cs" />
     <Compile Include="Web References\WSVIPP\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
