--- a/WindowsFormsApplication1/Properties/Settings.settings
+++ b/WindowsFormsApplication1/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="WindowsFormsApplication1.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="IntegradorWebService.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="Layout" Type="System.String" Scope="User">
@@ -7,6 +7,9 @@
     </Setting>
     <Setting Name="IntegradorWebService_WSVIPP_PostagemVipp" Type="(Web Service URL)" Scope="Application">
       <Value Profile="(Default)">http://vpsrv.visualset.com.br/PostagemVipp.asmx</Value>
+    </Setting>
+    <Setting Name="Site" Type="(Web Service URL)" Scope="User">
+      <Value Profile="(Default)">http://vipp.visualset.com.br</Value>
     </Setting>
   </Settings>
 </SettingsFile>
