--- a/WindowsFormsApplication1/Visualset.IntegradorWebService.csproj
+++ b/WindowsFormsApplication1/Visualset.IntegradorWebService.csproj
@@ -60,10 +60,10 @@
     <StartupObject>IntegradorWebService.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>4A91984E014A5D7D1503288379A144D326A24628</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>7EFA7CF8E3DA7B01F5F63CD9ECA0620B96AA4318</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>Visualset.IntegradorWebService_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>Visualset.IntegradorWebService_1_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -183,6 +183,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Visualset.IntegradorWebService_1_TemporaryKey.pfx" />
     <None Include="Visualset.IntegradorWebService_TemporaryKey.pfx" />
     <None Include="Web References\WSVIPP\BloquearDownload1.datasource">
       <DependentUpon>Reference.map</DependentUpon>
