--- a/WindowsFormsApplication1/Visualset.IntegradorWebService.csproj
+++ b/WindowsFormsApplication1/Visualset.IntegradorWebService.csproj
@@ -61,10 +61,10 @@
     <StartupObject>IntegradorWebService.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>EF772152434A30C7CFDF230979B1413C8825B534</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>D98896072D12626870381226F4572B9F48EF220F</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>Visualset.IntegradorWebService_2_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>Visualset.IntegradorWebService_3_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -76,10 +76,10 @@
     <ApplicationIcon>logo_visualset5_KbN_icona.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>Visualset.IntegradorWebService_2_TemporaryKey.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>Visualset.IntegradorWebService_3_TemporaryKey.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <DelaySign>false</DelaySign>
@@ -194,6 +194,7 @@
     </Compile>
     <None Include="Visualset.IntegradorWebService_1_TemporaryKey.pfx" />
     <None Include="Visualset.IntegradorWebService_2_TemporaryKey.pfx" />
+    <None Include="Visualset.IntegradorWebService_3_TemporaryKey.pfx" />
     <None Include="Visualset.IntegradorWebService_TemporaryKey.pfx" />
     <None Include="Web References\WSVIPP\BloquearDownload1.datasource">
       <DependentUpon>Reference.map</DependentUpon>
