--- a/WindowsFormsApplication1/Visualset.IntegradorWebService.csproj
+++ b/WindowsFormsApplication1/Visualset.IntegradorWebService.csproj
@@ -13,7 +13,7 @@
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <TargetFrameworkProfile />
-    <PublishUrl>C:\Users\ksjenger\Desktop\</PublishUrl>
+    <PublishUrl>C:\Users\ksjenger\Desktop\Teste Versão\Normalizador de Arquivos Interlagos - Cengage\Install\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -24,11 +24,12 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <SupportUrl>http://www.visualset.com.br/</SupportUrl>
+    <ErrorReportUrl>http://www.visualset.com.br/</ErrorReportUrl>
     <ProductName>Importador de Arquivos Personalizados</ProductName>
     <PublisherName>VisualSet Informatica</PublisherName>
     <SuiteName>VisualSet Informatica</SuiteName>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>7</ApplicationRevision>
+    <ApplicationRevision>9</ApplicationRevision>
     <ApplicationVersion>2.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -61,10 +62,10 @@
     <StartupObject>IntegradorWebService.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>D98896072D12626870381226F4572B9F48EF220F</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>92964341C2146A82C9E0827B7B9DE6E1A0ABC8C8</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>Visualset.IntegradorWebService_3_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>Visualset.IntegradorWebService_4_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -76,10 +77,10 @@
     <ApplicationIcon>logo_visualset5_KbN_icona.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>false</SignAssembly>
+    <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>Visualset.IntegradorWebService_3_TemporaryKey.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>Visualset.IntegradorWebService_4_TemporaryKey.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <DelaySign>false</DelaySign>
@@ -195,6 +196,7 @@
     <None Include="Visualset.IntegradorWebService_1_TemporaryKey.pfx" />
     <None Include="Visualset.IntegradorWebService_2_TemporaryKey.pfx" />
     <None Include="Visualset.IntegradorWebService_3_TemporaryKey.pfx" />
+    <None Include="Visualset.IntegradorWebService_4_TemporaryKey.pfx" />
     <None Include="Visualset.IntegradorWebService_TemporaryKey.pfx" />
     <None Include="Web References\WSVIPP\BloquearDownload1.datasource">
       <DependentUpon>Reference.map</DependentUpon>
