--- a/WindowsFormsApplication1/Visualset.IntegradorWebService.csproj
+++ b/WindowsFormsApplication1/Visualset.IntegradorWebService.csproj
@@ -13,7 +13,7 @@
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <TargetFrameworkProfile />
-    <PublishUrl>C:\Users\ksjenger\Desktop\Teste Versão\Normalizador de Arquivos Interlagos - Cengage\Install\</PublishUrl>
+    <PublishUrl>C:\Users\ksjenger\Desktop\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -29,7 +29,7 @@
     <PublisherName>VisualSet Informatica</PublisherName>
     <SuiteName>VisualSet Informatica</SuiteName>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>9</ApplicationRevision>
+    <ApplicationRevision>16</ApplicationRevision>
     <ApplicationVersion>2.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -193,11 +193,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="Visualset.IntegradorWebService_1_TemporaryKey.pfx" />
-    <None Include="Visualset.IntegradorWebService_2_TemporaryKey.pfx" />
-    <None Include="Visualset.IntegradorWebService_3_TemporaryKey.pfx" />
     <None Include="Visualset.IntegradorWebService_4_TemporaryKey.pfx" />
-    <None Include="Visualset.IntegradorWebService_TemporaryKey.pfx" />
     <None Include="Web References\WSVIPP\BloquearDownload1.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
